2010-02-16  Nikolas Zimmermann  <nzimmermann@rim.com>

        Rubber-stamped by Simon Fraser.

        Skip svg/zoom/(page|text)/zoom-coords-viewattr-01-b.svg on SnowLeopard.
        svg/W3C-SVG-1.1/coords-viewattr* fail on SL and are already Skipped, seems related to entity parsing, not SVG.

        * platform/mac-snowleopard/Skipped:

2010-02-16  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Nikolas Zimmermann.

        Make this test more robust to slow-loading media.

        * media/video-load-networkState.html:

2010-02-16  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=34999
        Compositing layers inside overflow:scroll divs are not always updated on scrolling
        
        New testcase with specific compositing configuration involving overflow:scroll.

        * compositing/overflow/scroll-ancestor-update.html: Added.
        * platform/mac/compositing/overflow/scroll-ancestor-update-expected.checksum: Added.
        * platform/mac/compositing/overflow/scroll-ancestor-update-expected.png: Added.
        * platform/mac/compositing/overflow/scroll-ancestor-update-expected.txt: Added.

2010-02-16  Nikolas Zimmermann  <nzimmermann@rim.com>

        Rubber-stamped by Dirk Schulze.

        Add missing .checksum file in platform/mac/svg/zoom/page. All parts of the original patch for bug 14004 have been landed.

        * platform/mac/svg/zoom/page/absolute-sized-document-no-scrollbars-expected.checksum: Added.

2010-02-16  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by David Hyatt.

        SVG units don't stay consistently sized on zoom
        https://bugs.webkit.org/show_bug.cgi?id=14004

        * platform/mac/svg/zoom: Added.
        * platform/mac/svg/zoom/page: Added.
        * platform/mac/svg/zoom/page/absolute-sized-document-no-scrollbars-expected.checksum: Added.